<resources>
    <string name="app_name">InventoryApp</string>
    <string name="test">test</string>
    <string name="quantityRemaining">Quantity Remaining = </string>
    <string name="category_overview">Overview</string>
    <string name="hint_name">Name</string>
    <string name="category_price">Price</string>
    <string name="hint_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="hint_quantity">Quantity</string>
    <string name="empty_view_subtitle_text">Get started by adding an item!</string>
    <string name="empty_view_title_text">Nothing to show!</string>
    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_update_item_successful">Item updated!</string>
    <string name="editor_update_item_failed">Item update failed</string>
    <string name="unsaved_changes_dialog_msg">Changes are unsaved</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="editor_cannot_delete">Cannot delete an item that does not yet exist</string>
    <string name="sell">Sell</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="editor_no_name_error">No name given to item</string>
    <string name="editor_no_price_error">No price given to item</string>
    <string name="editor_no_quantity_error">No quantity provided</string>
    <string name="order">Order More</string>
    <string name="emailOrder">Order for more:</string>
    <string name="quantityLeft">Quantity Left in Stock</string>
<string name="action_delete_all_entries">Delete All Items</string>


</resources>
